# pinionai-streamlit-agent

./: .env.example  Dockerfile  Dockerfile.slack  LICENSE  README.md  chat.py  chat_cli.py  chat_slack.py  chat_teams.py  pinionai_extensions.py  pyproject.toml  requirements.in  requirements.txt
docs/: GCPDeploy.md  PinionAI_Extensions.md  PinionAI_Process.md  SlackIntegration.md  Slack_Deployment_GCP_e2_micro.md  StreamlitDeploy.md  TeamsIntegration.md  iframe_PinionAI.md  slack_deploy_at_DO_or_GCP.md
mcp_server/: weather_server.py
